# lightweight-embeddings

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: githubhfsync.yaml
lightweight_embeddings/: __init__.py  analytics.py  router.py  service.py
