[tool.poetry]
name = "lightweight-embeddings"
version = "0.1.0"
description = "Fast, lightweight, multilingual embeddings solution."
authors = ["Hieu Lam <lamhieu.vk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
